--- a/.gitignore
+++ b/.gitignore
@@ -33,7 +33,7 @@ wheels/
 
 # Installer logs
 pip-log.txt
-pip-delete-this-directory.txt
+pip-delete-this-directory.txt 南非世界杯南非世界杯魂牵梦萦南非世界杯南非世界杯南非世界杯南非世界杯
 
 # Unit test / coverage reports
 htmlcov/
